<resources>
    <string name="app_name">Регистрация</string>
    <string name="login">Вход</string>
    <string name="change_password">Смена пароля</string>
    <string name="about">Описание</string>
    <string name="incorrect_password">Введен неверный пароль, попробуйте еще раз</string>
    <string name="incorrect_old_password">Введен неверный старый пароль, попробуйте еще раз</string>
    <string name="password_changed">Пароль успешно изменен</string>
    <string name="user_not_found">Такой пользователь не найден, попробуйте еще раз</string>
    <string name="email">Почта:</string>
    <string name="pop_button">Выйти</string>
    <string name="hint_login">Вход</string>
    <string name="hint_password">Пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_new_password">Повторить новый пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="registry">Регистрация</string>
    <string name="to_registry">Зарегистрироваться</string>
    <string name="drop_password">Сбросить пароль</string>
    <string name="hint_second_password">Повторить пароль</string>
    <string name="hint_email">Почта</string>
    <string name="password_do_not_match">Новые пароли не совпадают</string>
    <string name="fields_are_not_filled">Не все поля заполненны</string>
    <string name="registration_success">Пользователь успешно зарегистрирован</string>
    <string name="user_already_exist">Такой пользователь уже существует</string>
</resources>