<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login_page">

    <fragment
        android:id="@+id/login_page"
        android:name="com.example.app.ui.LogInFragment"
        android:label="@string/login" />
    <action
        android:id="@+id/action_LogInFragment_to_ChangePasswordFragment"
        app:destination="@id/change_password_page" />
    <action
        android:id="@+id/action_LogInFragment_to_AboutFragment"
        app:destination="@id/describe_page" />
    <action
        android:id="@+id/action_LogInFragment_to_RegistryFragment"
        app:destination="@id/registry_page" />

    <fragment
        android:id="@+id/change_password_page"
        android:name="com.example.app.ui.ChangePasswordFragment"
        android:label="@string/change_password">
    </fragment>

    <fragment
        android:id="@+id/describe_page"
        android:name="com.example.app.ui.AboutFragment"
        android:label="@string/about">
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/registry_page"
        android:name="com.example.app.ui.RegistryFragment"
        android:label="@string/registry">
    </fragment>

</navigation>
